# rag_and_roll

./: .gitignore  README.md  main.py  polish_mountains_hiking_trails_fake.csv  pyproject.toml
.github/workflows/: codeql.yml
src/: chromadb_load_data.py  firecrawl_form_scraper.py  textfile_to_chromadb.py  wikivoyage_textfile_to_chromadb.py
tests/: test_scraper.py
