[project]
name = "rag-and-roll"
version = "0.1.0"
description = "Building RAG utilizing Google Gemini LLM to interact with wikivoyage (https://pl.wikivoyage.org)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai>=1.62.0",
    "pydantic-ai-slim[google]>=1.62.0",
    "python-dotenv>=1.0.0",
    "chromadb>=1.5.1",
    "google-generativeai>=0.8.6",
    "tqdm>=4.67.3",
    "pandas>=3.0.1",
    "sentence-transformers>=5.2.3",
    "openai>=2.23.0",
    "torch>=2.10.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
